v1.12:7 - Full screen mode - Fix the navigation drop down not showing in front of the job sp.

--- a/dnss-web/src/main/webapp/resources/css/nav.css
+++ b/dnss-web/src/main/webapp/resources/css/nav.css
@@ -24,6 +24,7 @@ nav ul ul {
 
 nav ul li:hover > ul {
   display: block;
+  z-index: 1;
 }
 
 .primary {
